@@ -876,11 +876,14 @@ static void php_mssql_get_column_content_with_type(mssql_link *mssql_ptr,int off
 			unsigned char *res_buf;
 			int res_length = dbdatlen(mssql_ptr->link, offset);
 
-			res_buf = (unsigned char *) emalloc(res_length+1);
-			bin = ((DBBINARY *)dbdata(mssql_ptr->link, offset));
-			memcpy(res_buf,bin,res_length);
-			res_buf[res_length] = '\0';
-			ZVAL_STRINGL(result, res_buf, res_length, 0);
+			if (!res_length) {
+				ZVAL_NULL(result);
+			} else {
+				bin = ((DBBINARY *)dbdata(mssql_ptr->link, offset));
+				res_buf = (unsigned char *) emalloc(res_length+1);
+				memcpy(res_buf,bin,res_length);
+				res_buf[res_length] = '\0';
+				ZVAL_STRINGL(result, res_buf, res_length, 0);
 			}
 			break;
 		case SQLNUMERIC:
